--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "hrpy"
-version = "0.2.0"
+version = "0.2.1"
 description = "hr but written in python"
 authors = ["John Naylor <jonaylor89@gmail.com>"]
 license = "MIT"
+
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.0"
