--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "hr but written in python"
 authors = ["John Naylor <jonaylor89@gmail.com>"]
 license = "MIT"
 
-readme = "README.md"
+readme = "README.rst"
 
 [tool.poetry.dependencies]
 python = "^3.0"
