--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ python = "^3.0"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.scripts]
+hr = 'hrpy.hr:main'
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
